[package]
name = "acme-id-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
oyster-sdk = "0.3.0"
libsodium-sys-stable = "1.19.27"

[[bin]]
name = "prover"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
