[package]
name = "acme-id-signer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
libsodium-sys = "0.2.7"
serde_json = "1.0.96"
tokio = "1.28.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0.40"

[[bin]]
name = "signer"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
